[gd_scene load_steps=13 format=2]

[ext_resource path="res://Ravenhearst.gd" type="Script" id=1]
[ext_resource path="res://Viewport_1.gd" type="Script" id=2]
[ext_resource path="res://assets/background/dusk/parallax_bg_dusk.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/worlds/world_test.tscn" type="PackedScene" id=4]
[ext_resource path="res://Camera2D.gd" type="Script" id=5]
[ext_resource path="res://Viewport_2.gd" type="Script" id=6]
[ext_resource path="res://assets/hud/backpack/backpack.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/hud/hotbar/hotbar.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sound/strange_atmosphere.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/menu/PauseMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/menu/DeathMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/shader/shader_sepia.tscn" type="PackedScene" id=12]

[node name="Ravenhearst" type="Node"]

script = ExtResource( 1 )

[node name="Viewports" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 5
alignment = 1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_constants" ]

[node name="ViewportContainer_1" type="ViewportContainer" parent="Viewports" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 509.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="Viewport_1" type="Viewport" parent="Viewports/ViewportContainer_1" index="0"]

arvr = false
size = Vector2( 509, 576 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = true
usage = 0
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = true
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
script = ExtResource( 2 )
_sections_unfolded = [ "Audio Listener", "GUI", "Physics", "Render Target", "Rendering", "Shadow Atlas" ]

[node name="parallax_bg_dusk" parent="Viewports/ViewportContainer_1/Viewport_1" index="0" instance=ExtResource( 3 )]

[node name="World" parent="Viewports/ViewportContainer_1/Viewport_1" index="1" instance=ExtResource( 4 )]

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer_1/Viewport_1" index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 5 )
_sections_unfolded = [ "Drag Margin", "Editor", "Limit", "Offset", "Smoothing", "Transform" ]

[node name="CanvasModulate" type="CanvasModulate" parent="Viewports/ViewportContainer_1/Viewport_1" index="3"]

visible = false
color = Color( 0.0784314, 0.0627451, 0.12549, 1 )

[node name="ViewportContainer_2" type="ViewportContainer" parent="Viewports" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Visibility" ]

[node name="Viewport_2" type="Viewport" parent="Viewports/ViewportContainer_2" index="0"]

arvr = false
size = Vector2( 510, 576 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = true
usage = 0
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = true
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
script = ExtResource( 6 )
_sections_unfolded = [ "Audio Listener", "GUI", "Physics", "Render Target", "Rendering", "Shadow Atlas" ]

[node name="parallax_bg_dusk" parent="Viewports/ViewportContainer_2/Viewport_2" index="0" instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer_2/Viewport_2" index="1"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 5 )
_sections_unfolded = [ "Drag Margin", "Limit", "Offset", "Smoothing" ]

[node name="CanvasModulate" type="CanvasModulate" parent="Viewports/ViewportContainer_2/Viewport_2" index="2"]

visible = false
color = Color( 0.0784314, 0.0627451, 0.12549, 1 )

[node name="Backpack_1" parent="." index="1" instance=ExtResource( 7 )]

margin_top = 896.0
margin_bottom = 936.0
player_id = 1

[node name="Backpack_2" parent="." index="2" instance=ExtResource( 7 )]

margin_left = 752.0
margin_top = 896.0
margin_right = 792.0
margin_bottom = 936.0
player_id = 2

[node name="Hotbar_1" parent="." index="3" instance=ExtResource( 8 )]

margin_left = 80.0
margin_top = 1504.0
margin_right = 664.0
margin_bottom = 1584.0
player_id = 1

[node name="Hotbar_2" parent="." index="4" instance=ExtResource( 8 )]

margin_left = 848.0
margin_top = 1504.0
margin_right = 1432.0
margin_bottom = 1584.0
player_id = 2

[node name="music" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 9 )
volume_db = -6.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="pause_screen" parent="." index="6" instance=ExtResource( 10 )]

pause_mode = 2
visible = false
_sections_unfolded = [ "Margin", "Pause", "Rect" ]

[node name="death_screen" parent="." index="7" instance=ExtResource( 11 )]

pause_mode = 2
visible = false
_sections_unfolded = [ "Margin", "Pause", "Rect" ]

[node name="shader_sepia" parent="." index="8" instance=ExtResource( 12 )]

margin_right = 1024.0
margin_bottom = 768.0

[connection signal="finished" from="music" to="." method="_on_music_finished"]

[connection signal="visibility_changed" from="death_screen" to="death_screen" method="_on_death_screen_visibility_changed"]


